--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlockForge Suite - Transform Anything into LEGO®</title>
     <meta name="description" content="Transform anything into LEGO® - powered by exponential decay mathematics">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="manifest.json">
     <!-- Theme color meta tags are kept for Chrome/Edge PWA support; not supported in Firefox/Opera -->
     <meta name="theme-color" content="#004E89">
     <meta name="theme-color" content="#004E89" media="(prefers-color-scheme: light)">
@@ -16,6 +16,70 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect fill='%23FF6B35' width='100' height='100'/%3E%3C/svg%3E">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="stylesheet" href="shared/styles.css">
+    <style>
+        /* --- Visual Enhancements & Animations --- */
+        html { scroll-behavior: smooth; }
+
+        /* 1. Hero Section Polish: Subtle LEGO stud pattern */
+        .hero {
+            background-image: 
+                radial-gradient(rgba(0, 78, 137, 0.08) 15%, transparent 16%),
+                radial-gradient(rgba(0, 78, 137, 0.08) 15%, transparent 16%);
+            background-size: 24px 24px;
+            background-position: 0 0, 12px 12px;
+            position: relative;
+        }
+
+        /* 2. Logo Animation: "Building" effect */
+        .logo-icon > * {
+            opacity: 0;
+            animation: buildBlock 0.6s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
+        }
+        /* Stagger the blocks */
+        .logo-icon > *:nth-child(1) { animation-delay: 0.1s; }
+        .logo-icon > *:nth-child(2) { animation-delay: 0.2s; }
+        .logo-icon > *:nth-child(5) { animation-delay: 0.3s; }
+        .logo-icon > *:nth-child(3) { animation-delay: 0.4s; }
+        .logo-icon > *:nth-child(4) { animation-delay: 0.5s; }
+        .logo-icon > *:nth-child(6) { animation-delay: 0.6s; }
+
+        @keyframes buildBlock {
+            from { opacity: 0; transform: translateY(-40px) scale(0.8); }
+            to { opacity: 1; transform: translateY(0) scale(1); }
+        }
+
+        /* 3. Interactive Studio Cards */
+        .studio-card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .studio-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 12px 24px rgba(0, 53, 96, 0.15);
+        }
+        .studio-icon {
+            transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            display: inline-block;
+        }
+        .studio-card:hover .studio-icon {
+            transform: scale(1.2) rotate(10deg);
+        }
+
+        /* 4. Smooth Theory Toggle Animation */
+        .theory-details {
+            display: block !important; /* Override external display:none */
+            max-height: 500px;
+            opacity: 1;
+            transition: max-height 0.5s ease-in-out, opacity 0.4s ease, margin 0.4s;
+            overflow: hidden;
+        }
+        .theory-details.hidden {
+            max-height: 0;
+            opacity: 0;
+            margin-top: 0 !important;
+            margin-bottom: 0 !important;
+            pointer-events: none;
+        }
+    </style>
 </head>
 <body>
     <header class="hero">
@@ -193,7 +257,7 @@
         // Register service worker when available
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js').catch(() => {
+                navigator.serviceWorker.register('sw.js').catch(() => {
                     console.log('Service worker registration optional');
                 });
             });
