Update studio links and improve manifest path for image studio

--- a/index.html
+++ b/index.html
@@ -229,12 +229,11 @@
                     <span class="status-badge beta">Beta</span>
                 </a>
 
-                <div class="studio-card coming-soon">
+                <a href="studios/text/index.html" class="studio-card">
                     <div class="studio-icon">📝</div>
                     <h3>Text Studio</h3>
                     <p>Transform text into buildable LEGO signs and displays with optimized letter forms.</p>
-                    <span class="status-badge">Coming Soon</span>
-                </div>
+                </a>
 
                 <div class="studio-card coming-soon">
                     <div class="studio-icon">🎲</div>
