--- a/studios/image/index.html
+++ b/studios/image/index.html
@@ -9,7 +9,7 @@
         if (window.location.protocol !== 'file:') {
             const link = document.createElement('link');
             link.rel = 'manifest';
-            link.href = 'manifest.json';
+            link.href = '../../manifest.json';
             document.head.appendChild(link);
         }
     </script>
@@ -564,6 +564,7 @@
             opacity: 0;
             pointer-events: none;
             transition: opacity 0.3s;
+            -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
         }
         .loading-overlay.active {
