Add Text Studio with initial implementation and beta badge

--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                     <div class="studio-icon">📝</div>
                     <h3>Text Studio</h3>
                     <p>Transform text into buildable LEGO signs and displays with optimized letter forms.</p>
+                    <span class="status-badge beta">Beta</span>
                 </a>
 
                 <div class="studio-card coming-soon">
