--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
-            z-index: -1;
+            z-index: 0;
             overflow: hidden;
         }
 
@@ -166,6 +166,12 @@
 
         @media (prefers-reduced-motion: reduce) {
             #falling-bricks-container { display: none; }
+        }
+
+        /* Ensure content sits above falling bricks */
+        header, main, footer {
+            position: relative;
+            z-index: 1;
         }
     </style>
 </head>
