--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
 
         .falling-brick {
             position: absolute;
-            top: -60px;
             border-radius: 2px;
             opacity: 0.15;
             background-image: radial-gradient(rgba(0,0,0,0.2) 25%, transparent 25%);
@@ -159,9 +158,14 @@
             box-shadow: 2px 2px 4px rgba(0,0,0,0.1);
         }
 
+        /* THIS WAS MISSING - THE KEYFRAMES ANIMATION! */
         @keyframes fall {
-            0% { transform: translateY(-60px) rotate(0deg); }
-            100% { transform: translateY(110vh) rotate(360deg); }
+            0% { 
+                transform: translateY(-60px) rotate(0deg); 
+            }
+            100% { 
+                transform: translateY(110vh) rotate(360deg); 
+            }
         }
 
         @media (prefers-reduced-motion: reduce) {
